# teststand

./: README.md  standard.md
src/book/: book.toml
src/book/src/: SUMMARY.md
src/complex/src/server/: Cargo.toml
src/complex/src/server/src/: main.rs
src/complex/src/server/src/util/: cors.rs  mod.rs
src/complex/src/website/: Cargo.toml  build.rs
src/complex/src/website/public/: robots.txt
src/complex/src/website/src/: fallback.rs  lib.rs  schema.graphql
src/complex/src/website/src/pages/: client.rs  mod.rs
src/complex/src/website/src/pages/home/: mod.rs
src/simple/: Cargo.toml
src/simple/.github/: CONTRIBUTING.md  dependabot.yml
src/simple/src/server/: Cargo.toml
src/simple/src/server/src/: main.rs
src/simple/src/server/src/services/: mod.rs
src/simple/src/server/src/util/: graphql.rs
src/simple/src/website/: Cargo.toml  README.md  package.json
src/simple/src/website/public/: manifest.json
src/simple/src/website/src/: build.rs  fallback.rs  lib.rs  main.rs
src/simple/src/website/src/pages/: client.rs  mod.rs
src/simple/src/website/src/pages/home/: data.rs  mod.rs  query.rs  view.rs
src/swd/: Cargo.toml
src/swd/src/: fallback.rs  graphql.rs  lib.rs  website.rs
