[package]
name = "swd"
authors = ["Himadu2000 <49078336+Himadu2000@users.noreply.github.com>"]
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
async-graphql = "7.0.6"
async-graphql-rocket = "7.0.6"
reqwest = "0.12.5"
rocket = "0.5.1"
surrealdb = { version = "1.5.3", features = ["kv-mem"] }
